[package]
name = "rbperf"
description = "Sampling profiler and tracer for Ruby (CRuby) which runs in BPF"
version = "0.4.0"
repository = "https://github.com/javierhonduco/rbperf"
authors = ["Javier Honduvilla Coto <javierhonduco@gmail.com>"]
keywords = ["bpf", "ebpf", "ruby", "CRuby", "profiler", "tracer"]
license = "MIT"
edition = "2021"

[profile.release]
lto = true

[dependencies]
goblin = "0.6.1"
anyhow = {version= "1.0.69", features = ["backtrace"]}
proc-maps = "0.3.0"
serde = {version = "1.0.152", features = ["derive"] }
clap = {version = "4.1.7", features = ["derive"]}
serde_json = "1.0.93"
chrono = "0.4.23"
inferno = "0.11.15"
libbpf-rs = {version = "0.19.1", features=["static"]}
perf-event-open-sys = "4.0.0"
errno = "0.3.0"
libc = "0.2.139"
log = "0.4.17"
env_logger = "0.10.0"
serde_yaml = "0.9"
thiserror = "1.0.38"
nix = "0.26.2"
syscalls = { version = "0.6", default-features = false }
ctrlc = "3.2.5"
num_cpus = "1.15.0"

[dev-dependencies]
project-root = "0.2.2"
rand = "0.8.5"

[build-dependencies]
bindgen = "0.64.0"
libbpf-cargo = "0.13.1"

[workspace]
members = [
    ".",
    "xtask",
]
